--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ python = "^3.9"
 Django = "^4.0.2"
 mysqlclient = "^2.1.0"
 djangorestframework = "^3.13.1"
+behave-django = "^1.4.0"
+PyHamcrest = "^2.0.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -19,12 +21,15 @@ flake8-bugbear = "^22.1.11"
 isort = "^5.10.1"
 mypy = "^0.931"
 pre-commit = "^2.17.0"
+behave = "^1.2.6"
+PyHamcrest = "^2.0.3"
 
 [tool.taskipy.tasks]
 check = "poetry run task isort & poetry run task format & poetry run task lint"
 lint = "poetry run pflake8 src"
 format = "poetry run black src"
 isort = "poetry run isort --atomic src"
+test = "{ cmd = docker-compose exec web python src/manage.py behave --use-existing-database }"
 
 [tool.flake8]
 max-line-length = 119
